--- a/index.html
+++ b/index.html
@@ -24,5 +24,17 @@
         
     </main>
     <script src="script.js"></script>
+    <div class="footer-basic">
+        <footer>
+            <div class="social"><a href="https://api.whatsapp.com/send/?phone=5511992471362&text&app_absent=0"><img src="imagem/whatsapp.png" alt="Whatsapp" width="40px;" ><i class="social"></i></a><a href="https://www.instagram.com/patsbbraids/"><img src="imagem/instagram.png" width="40px" alt="Instagram"><i class="social"></i></a><a href="www.facebook.com"><img src="imagem/facebook.png" width="40px" alt="Facebook"><i class="social"></i></a></div>
+            <ul class="list-inline">
+                <li class="list-inline-item"><a href="#">Home</a></li>
+                <li class="list-inline-item"><a href="#">Serviços</a></li>
+                <li class="list-inline-item"><a href="#">Sobre nós</a></li>
+                <li class="list-inline-item"><a href="#">Política de Privacidade</a></li>
+            </ul>
+            <p class="copyright">Patty Tranças © 2021</p>
+        </footer>
+    </div>
 </body>
 </html>
