--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 
 
         <!--Conteúdo do slide-->
+        <!--Conteúdo do slide-->
+        
         <div class="content">
                 <!--Imagens do slide-->
             <div class="slides">
