adicionei o link para redirecionar para outra pagina "agendar horario"

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a class="logo" href="index.html"><img srcset="imagem/logo.png" style="width: 15%"></a>
             <ul class="nav-list">
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Marcar horário</a></li>
+                <li><a href="agendar.html">Marcar horário</a></li>
                 <li><a href="#">Login</a></li>
             </ul>
         </nav>
@@ -26,7 +26,7 @@
 
 
 
-        <!--Conteúdo do slide-->
+        
         <!--Conteúdo do slide-->
         
         <div class="content">
