--- a/agendar.html
+++ b/agendar.html
@@ -15,10 +15,12 @@
             <ul class="nav-list">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#">Marcar horário</a></li>
-                <li><a href="#">Login</a></li>
+                <li><a href="sobre.html">Sobre Nós</a></li>
             </ul>
         </nav>
     </header>
+
+
 
 <div id="container2">
     <div>
@@ -57,6 +59,17 @@
         <button class="botao" type="submit">AGENDAR</button>
     </form>
 </div>  
+
+<div class="footer-basic">
+    <footer>
+        <div class="social"><a href="https://api.whatsapp.com/send/?phone=5511992471362&text&app_absent=0" target="_blank"><img src="imagem/whatsapp.png" alt="Whatsapp" width="40px;" ><i class="social"></i></a><a href="https://www.instagram.com/patsbbraids/" target="_blank"><img src="imagem/instagram.png" width="40px" alt="Instagram"><i class="social"></i></a><a href="www.facebook.com" target="_blank"><img src="imagem/facebook.png" width="40px" alt="Facebook"><i class="social"></i></a></div>
+        <ul class="list-inline">
+            <li class="list-inline-item"><a href="index.html">Home</a></li>
+            <li class="list-inline-item"><a href="#">Sobre Nós</a></li>
+        </ul>
+        <p class="copyright">Todos os Direitos Reservados © 2021</p>
+    </footer>
+</div>
 
 
 </body>
