--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="slide.css">
     <title>Patty Tranças</title>
 </head>
 <body>
@@ -16,7 +15,7 @@
             <ul class="nav-list">
                 <li><a href="#">Home</a></li>
                 <li><a href="agendar.html">Marcar horário</a></li>
-                <li><a href="#">Login</a></li>
+                <li><a href="sobre.html">Sobre Nós</a></li>
             </ul>
         </nav>
     </header>
@@ -26,9 +25,7 @@
 
 
 
-        
         <!--Conteúdo do slide-->
-        
         <div class="content">
                 <!--Imagens do slide-->
             <div class="slides">
@@ -76,14 +73,13 @@
     <script src="script.js"></script>
     <div class="footer-basic">
         <footer>
-            <div class="social"><a href="https://api.whatsapp.com/send/?phone=5511992471362&text&app_absent=0"><img src="imagem/whatsapp.png" alt="Whatsapp" width="40px;" ><i class="social"></i></a><a href="https://www.instagram.com/patsbbraids/"><img src="imagem/instagram.png" width="40px" alt="Instagram"><i class="social"></i></a><a href="www.facebook.com"><img src="imagem/facebook.png" width="40px" alt="Facebook"><i class="social"></i></a></div>
+            <div class="social"><a href="https://api.whatsapp.com/send/?phone=5511992471362&text&app_absent=0" target="_blank"><img src="imagem/whatsapp.png" alt="Whatsapp" width="40px;" ><i class="social"></i></a><a href="https://www.instagram.com/patsbbraids/" target="_blank"><img src="imagem/instagram.png" width="40px" alt="Instagram"><i class="social"></i></a><a href="www.facebook.com" target="_blank"><img src="imagem/facebook.png" width="40px" alt="Facebook"><i class="social"></i></a></div>
             <ul class="list-inline">
                 <li class="list-inline-item"><a href="#">Home</a></li>
-                <li class="list-inline-item"><a href="#">Serviços</a></li>
-                <li class="list-inline-item"><a href="#">Sobre nós</a></li>
-                <li class="list-inline-item"><a href="#">Política de Privacidade</a></li>
+                <li class="list-inline-item"><a href="agendar.html">Agende seu horário</a></li>
+                <li class="list-inline-item"><a href="sobre.html">Sobre Nós</a></li>
             </ul>
-            <p class="copyright">Patty Tranças © 2021</p>
+            <p class="copyright">Todos os Direitos Reservados © 2021</p>
         </footer>
     </div>
 </body>
