--- a/agendar.html
+++ b/agendar.html
@@ -28,31 +28,31 @@
         <br>
     </div>
 
-    <form action="">
+    <form name="form1" action="grava.jsp" method="post">
         <fieldset id="agenda">
             <div class="campo">
                 <label for="nome">Nome</label>
-                <input type="text" name="Nome" id="nome" required> 
+                <input type="text" name="nome" id="nome" required> 
             </div>
             
             <div class="campo">
                 <label for="sobrenome">Sobrenome</label>
-                <input type="text" name="Sobrenome" id="sobrenome" required>
+                <input type="text" name="sobrenome" id="sobrenome" required>
             </div>
 
             <div class="campo">
                 <label for="email">Email</label>
-                <input type="email" name="Email" id="email" required>
+                <input type="email" name="email" id="email" required>
             </div>
 
             <div class="campo">
-                <label for="data">Data</label>
-                <input type="date" name="Data" id="data" required>
+                <label for="data">Data: (Digite o dia, mês e o ano. Ex: 15/11/2021)</label>
+                <input type="text" name="dia" id="data" required>
             </div>
 
             <div class="campo">
                 <label for="horario">Horário</label>
-                <input type="time" name="Horario" id="horario" required>
+                <input type="time" name="horario" id="horario" required>
             </div>
         </fieldset>
 
