--- a/sobre.html
+++ b/sobre.html
@@ -21,8 +21,9 @@
 
     <main id="sobre">
         <h1 class="titulo">Quem somos?</h1>
-        <p class="paragrafos">A minha loja Patty Tranças iniciou em meados de 2020, pois amo cuidar da beleza de outras pessoas. </p>
-        
+        <p class="paragrafos">A minha loja Patty Tranças iniciou em meados de 2020, pois amo cuidar da beleza de outras pessoas. Minha especialidade é a trança de cabelo entre outros penteados. </p>
+        <p class="paragrafos">E isso tudo foi devido a pandemia que iniciou-se em 2020 e me deu a oportunidade de empreender e abrir meu negócio próprio.</p>
+        <p class="paragrafos">Então já que você conhece um pouco de minha história não perda mais tempo e venha conferir nossos preços ou agende seu horário por meio de nossas redes sociais facebook, whatsapp e instagram ou até mesmo por meio de nosso site <a style="color: rgb(48, 5, 238);" href="agendar.html"> Clique aqui</a>, estou disponivel entre os horários das 10:00 ás 19:00 de seg a sab.</p>
 
     </main>
 
