Atualizando cor do texto linkado

--- a/sobre.html
+++ b/sobre.html
@@ -23,7 +23,7 @@
         <h1 class="titulo">Quem somos?</h1>
         <p class="paragrafos">A minha loja Patty Tranças iniciou em meados de 2020, pois amo cuidar da beleza de outras pessoas. Minha especialidade é a trança de cabelo entre outros penteados. </p>
         <p class="paragrafos">E isso tudo foi devido a pandemia que iniciou-se em 2020 e me deu a oportunidade de empreender e abrir meu negócio próprio.</p>
-        <p class="paragrafos">Então já que você conhece um pouco de minha história não perda mais tempo e venha conferir nossos preços ou agende seu horário por meio de nossas redes sociais facebook, whatsapp e instagram ou até mesmo por meio de nosso site <a style="color: rgb(48, 5, 238);" href="agendar.html"> Clique aqui</a>, estou disponivel entre os horários das 10:00 ás 19:00 de seg a sab.</p>
+        <p class="paragrafos">Então já que você conhece um pouco de minha história não perda mais tempo e venha conferir nossos preços ou agende seu horário por meio de nossas redes sociais facebook, whatsapp e instagram ou até mesmo por meio de nosso site <a style="color: #c29608;" href="agendar.html"> Clique aqui</a>, estou disponivel entre os horários das 10:00 ás 19:00 de seg a sab.</p>
 
     </main>
 
@@ -31,7 +31,7 @@
         <footer>
             <div class="social"><a href="https://api.whatsapp.com/send/?phone=5511992471362&text&app_absent=0" target="_blank"><img src="imagem/whatsapp.png" alt="Whatsapp" width="40px;" ><i class="social"></i></a><a href="https://www.instagram.com/patsbbraids/" target="_blank"><img src="imagem/instagram.png" width="40px" alt="Instagram"><i class="social"></i></a><a href="www.facebook.com" target="_blank"><img src="imagem/facebook.png" width="40px" alt="Facebook"><i class="social"></i></a></div>
             <ul class="list-inline">
-                <li class="list-inline-item"><a href="#">Home</a></li>
+                <li class="list-inline-item"><a href="index.html">Home</a></li>
                 <li class="list-inline-item"><a href="agendar.html">Agende seu horário</a></li>
                 <li class="list-inline-item"><a href="sobre.html">Sobre Nós</a></li>
             </ul>
