--- a/agendar.html
+++ b/agendar.html
@@ -63,10 +63,11 @@
 <div class="footer-basic">
     <footer>
         <div class="social"><a href="https://api.whatsapp.com/send/?phone=5511992471362&text&app_absent=0" target="_blank"><img src="imagem/whatsapp.png" alt="Whatsapp" width="40px;" ><i class="social"></i></a><a href="https://www.instagram.com/patsbbraids/" target="_blank"><img src="imagem/instagram.png" width="40px" alt="Instagram"><i class="social"></i></a><a href="www.facebook.com" target="_blank"><img src="imagem/facebook.png" width="40px" alt="Facebook"><i class="social"></i></a></div>
-        <ul class="list-inline">
-            <li class="list-inline-item"><a href="index.html">Home</a></li>
-            <li class="list-inline-item"><a href="#">Sobre Nós</a></li>
-        </ul>
+            <ul class="list-inline">
+                <li class="list-inline-item"><a href="index.html">Home</a></li>
+                <li class="list-inline-item"><a href="agendar.html">Agende seu horário</a></li>
+                <li class="list-inline-item"><a href="sobre.html">Sobre Nós</a></li>
+            </ul>
         <p class="copyright">Todos os Direitos Reservados © 2021</p>
     </footer>
 </div>
